ran out of time, tests not working

--- a/infrastructure/tsconfig.json
+++ b/infrastructure/tsconfig.json
@@ -24,6 +24,11 @@
       "./node_modules/@types"
     ]
   },
+  "include": [
+    "bin/**/*.ts",
+    "lib/**/*.ts",
+    "test/**/*.ts"
+  ],
   "exclude": [
     "node_modules",
     "cdk.out"
