--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -2,7 +2,7 @@
   "name": "cdk-test",
   "version": "0.1.0",
   "bin": {
-    "infrastructure": "bin/main.js"
+    "infrastructure": "bin/handler.js"
   },
   "scripts": {
     "build": "tsc",
@@ -11,16 +11,19 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.149",
     "@types/jest": "^29.5.14",
-    "@types/node": "22.7.9",
+    "@types/node": "^22.7.9",
+    "aws-cdk": "2.1010.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "aws-cdk": "2.1010.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3"
   },
   "dependencies": {
     "aws-cdk-lib": "2.189.0",
+    "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1692.0",
     "constructs": "^10.0.0"
   }
 }
